--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.91.0",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
@@ -25,7 +26,8 @@
     "react-router-dom": "^7.10.1",
     "react-spinners": "^0.17.0",
     "recharts": "^3.6.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
